--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "react-bootstrap": "^2.1.2",
     "react-dom": "^17.0.2",
     "react-pro-sidebar": "^0.7.1",
+    "react-rating-stars-component": "^2.2.0",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "react-spinners": "^0.11.0",
+    "react-transition-group": "^4.4.2",
     "sass": "^1.49.8",
     "validator": "^13.7.0",
     "web-vitals": "^2.1.4"
