--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.2",
+    "react-datepicker": "^4.7.0",
     "react-dom": "^17.0.2",
     "react-pro-sidebar": "^0.7.1",
     "react-rating-stars-component": "^2.2.0",
