--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/styled": "^11.8.1",
+    "@mui/icons-material": "^5.4.4",
+    "@mui/material": "^5.4.4",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
@@ -13,6 +16,7 @@
     "react-bootstrap": "^2.1.2",
     "react-datepicker": "^4.7.0",
     "react-dom": "^17.0.2",
+    "react-dropdown": "^1.9.2",
     "react-pro-sidebar": "^0.7.1",
     "react-rating-stars-component": "^2.2.0",
     "react-router-dom": "^6.2.1",
