--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "react-spinners": "^0.11.0",
+    "react-toastify": "^8.2.0",
     "react-transition-group": "^4.4.2",
     "sass": "^1.49.8",
     "validator": "^13.7.0",
