--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-datepicker": "^4.7.0",
     "react-dom": "^17.0.2",
     "react-dropdown": "^1.9.2",
+    "react-icons": "^4.3.1",
     "react-image-file-resizer": "^0.4.7",
     "react-pro-sidebar": "^0.7.1",
     "react-rating-stars-component": "^2.2.0",
