--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@emotion/styled": "^11.8.1",
+    "@lottiefiles/lottie-player": "^1.5.6",
     "@mui/icons-material": "^5.4.4",
     "@mui/material": "^5.4.4",
     "@testing-library/jest-dom": "^5.16.1",
