--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-datepicker": "^4.7.0",
     "react-dom": "^17.0.2",
     "react-dropdown": "^1.9.2",
+    "react-helmet": "^6.1.0",
     "react-icons": "^4.3.1",
     "react-image-file-resizer": "^0.4.7",
     "react-pro-sidebar": "^0.7.1",
